Font resize for styling

--- a/community_and_resources/templates/resources.html
+++ b/community_and_resources/templates/resources.html
@@ -15,7 +15,7 @@
         <div class="card-header" id="headingTwo">
           <h5 class="mb-0">
             <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-              Safety
+              <h5>Safety</h5>
             </button>
           </h5>
         </div>
@@ -60,7 +60,7 @@
         <div class="card-header" id="headingThree">
           <h5 class="mb-0">
             <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-              Health and Wellbeing
+              <h5>Health and Wellbeing</h5>
             </button>
           </h5>
         </div>
@@ -120,7 +120,7 @@
         <div class="card-header" id="headingFour">
           <h5 class="mb-0">
             <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-              Forms
+              <h5>Forms</h5>
             </button>
           </h5>
         </div>
@@ -159,7 +159,7 @@
         <div class="card-header" id="headingFive">
           <h5 class="mb-0">
             <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-              How-To
+              <h5>How-To</h5>
             </button>
           </h5>
         </div>
@@ -192,7 +192,7 @@
         <div class="card-header" id="headingSix">
           <h5 class="mb-0">
             <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
-              RST
+              <h5>RST</h5>
             </button>
           </h5>
         </div>
