Reordering community page, adding links for comm and resource pages

--- a/community_and_resources/templates/community.html
+++ b/community_and_resources/templates/community.html
@@ -36,17 +36,7 @@
       </div>
       
       
-      
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Images</h5>
-          <p class="card-text">Remember you time at Turner Hall with images of your time here! The link below will bring you to a shared Google Drive which contains a bunch on images from different events throughout the year.<p>
-          <a target="_blank" href="#" class="btn btn-primary">Image Drive</a>
-        </div>
-      </div>
-      
-      
-      
+          
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">Weekly Events</h5>
@@ -66,28 +56,6 @@
         </div>
       </div>
       
-      
-      
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Calendar</h5>
-          <p class="card-text">Get on top of the goings-on at the Hall with the Turner Hall calendar! The link below will take you to a Google Calendar containing al upcoming events.<p>
-          <a target="_blank" href="#" class="btn btn-primary">Google Calendar</a>
-        </div>
-      </div>
-      
-      
-      
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Cooking</h5>
-          <p class="card-text">Cooking for yourself can be hard, so let us help you! The link below goes to a Google Drive containing recipes and cooking advice for you to use.<p>
-          <a target="_blank" href="#" class="btn btn-primary">Cooking Drive</a>
-        </div>
-      </div>
-      
-      
-      
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">Groups</h5>
@@ -95,7 +63,7 @@
             Even if you only have a small interest in a certain topic, please join the group and get involved! 
             Academic groups will be restricted to those in that area of study, please utilise them to help each other learn, organise groups studies, etc.
             You can also find links to Turner Hall's social media, in case you haven't joined us yet.<p>
-          <div class="card" style="max-height: 500px;overflow-y: auto">
+          <div class="card" style="max-height: 400px;overflow-y: auto">
             <div id="accordion" m="100px">
                 <div class="card-header" id="headingFive">
                   <h5 class="mb-0">
@@ -171,37 +139,22 @@
                 <div class="card-body">
                   <div class="card">
                     <div class="card-header">
-                      <h5 class="card-title"><a target="_blank" href="#">FIFA</a></h5>
+                      <h5 class="card-title"><a target="_blank" href="#">Sport</a></h5>
                     </div>
                   </div>
                   <div class="card">
                     <div class="card-header">
-                      <h5 class="card-title"><a target="_blank" href="#">Football (AUS)</a></h5>
+                      <h5 class="card-title"><a target="_blank" href="#">Music</a></h5>
                     </div>
                   </div>
                   <div class="card">
                     <div class="card-header">
-                      <h5 class="card-title"><a target="_blank" href="#">Futsal and Soccer</a></h5>
+                      <h5 class="card-title"><a target="_blank" href="#">Art</a></h5>
                     </div>
                   </div>
                   <div class="card">
                     <div class="card-header">
-                      <h5 class="card-title"><a target="_blank" href="#">League of Legends</a></h5>
-                    </div>
-                  </div>
-                  <div class="card">
-                    <div class="card-header">
-                      <h5 class="card-title"><a target="_blank" href="#">Netball</a></h5>
-                    </div>
-                  </div>
-                  <div class="card">
-                    <div class="card-header">
-                      <h5 class="card-title"><a target="_blank" href="#">Super Smash Bros.</a></h5>
-                    </div>
-                  </div>
-                  <div class="card">
-                    <div class="card-header">
-                      <h5 class="card-title"><a target="_blank" href="#">Tennis</a></h5>
+                      <h5 class="card-title"><a target="_blank" href="#">Video Games</a></h5>
                     </div>
                   </div>
                 </div>
@@ -239,7 +192,7 @@
                   </div>
                   <div class="card">
                     <div class="card-header">
-                      <h5 class="card-title"><a target="_blank" href="#">Information Technology</a></h5>
+                      <h5 class="card-title"><a target="_blank" href="#">Information technology</a></h5>
                     </div>
                   </div>
                   <div class="card">
@@ -249,12 +202,17 @@
                   </div>
                   <div class="card">
                     <div class="card-header">
-                      <h5 class="card-title"><a target="_blank" href="#">Medicine, nursing and health sciences</a></h5>
+                      <h5 class="card-title"><a target="_blank" href="#">Music, art, design and architecture</a></h5>
                     </div>
                   </div>
                   <div class="card">
                     <div class="card-header">
-                      <h5 class="card-title"><a target="_blank" href="#">Pharmacy and pharmaceutical sciences</a></h5>
+                      <h5 class="card-title"><a target="_blank" href="#">Medicine</a></h5>
+                    </div>
+                  </div>
+                  <div class="card">
+                    <div class="card-header">
+                      <h5 class="card-title"><a target="_blank" href="#">Nursing and health sciences</a></h5>
                     </div>
                   </div>
                   <div class="card">
@@ -269,6 +227,37 @@
           <p class="card-text">Missed an interest or study area? Let us know in the feedback form!</p>
         </div>
       </div>
+      
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Images</h5>
+          <p class="card-text">Remember you time at Turner Hall with images of your time here! The link below will bring you to a shared Google Drive which contains a bunch on images from different events throughout the year.<p>
+          <a target="_blank" href="https://drive.google.com/open?id=1i92IYdT2n7L3G-cRitbqipZN9hUKPe3t" class="btn btn-primary">Image Drive</a>
+        </div>
+      </div>
+      
+      
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Calendar</h5>
+          <p class="card-text">Get on top of the goings-on at the Hall with the Turner Hall calendar! The link below will take you to a Google Calendar containing al upcoming events.<p>
+          <a target="_blank" href="#" class="btn btn-primary">Google Calendar</a>
+        </div>
+      </div>
+      
+      
+      
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Cooking</h5>
+          <p class="card-text">Cooking for yourself can be hard, so let us help you! The link below goes to a Google Drive containing recipes and cooking advice for you to use.<p>
+          <a target="_blank" href="https://drive.google.com/open?id=12hJkNo1JxtOuflgEgmmaY_YATc7gT_ts" class="btn btn-primary">Cooking Drive</a>
+        </div>
+      </div>
+      
+      
+      
+      
     </div>
     
     
