--- a/community_and_resources/templates/resources.html
+++ b/community_and_resources/templates/resources.html
@@ -134,7 +134,7 @@
             </div>
             <div class="card">
               <div class="card-header">
-                <h5 class="card-title"><a target="_blank" href="https://docs.google.com/a/monash.edu/forms/d/12nDUiyDEqXZs3cM39vIbX0gXfnue0JVLVCajyVIjqe8/viewform?fbclid=IwAR1VAHU9VaUqXVfTbL_wXPIfRQiuYNIfyMUnE1psHLnVFuect_BnpxZBfVw">Absence Form</a></h5>
+                <h5 class="card-title"><a target="_blank" href="https://docs.google.com/a/monash.edu/forms/d/12nDUiyDEqXZs3cM39vIbX0gXfnue0JVLVCajyVIjqe8/viewform?fbclid=IwAR1VAHU9VaUqXVfTbL_wXPIfRQiuYNIfyMUnE1psHLnVFuect_BnpxZBfVw">Absence</a></h5>
               </div>
             </div>
             <div class="card">
@@ -144,12 +144,12 @@
             </div>
             <div class="card">
               <div class="card-header">
-                <h5 class="card-title"><a target="_blank" href="https://www.google.com">Suggestions for the Hall</a></h5>
+                <h5 class="card-title"><a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSdHIDgllMD9VEpd4To8Y48E_X8zUqydypWdfv25-7db-QwVmQ/viewform?usp=sf_link">Suggestions for the Hall</a></h5>
               </div>
             </div>
             <div class="card">
               <div class="card-header">
-                <h5 class="card-title"><a target="_blank" href="https://www.google.com">Website Issues and Bugs</a></h5>
+                <h5 class="card-title"><a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSfUJiBD15jb0Zh8XYRgKM5u46qEN-KdF4Oh7jqdSh5XwhExrg/viewform?usp=sf_link">Website Issues and Suggestions</a></h5>
               </div>
             </div>
           </div>
@@ -165,6 +165,11 @@
         </div>
         <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordion">
           <div class="card-body">
+            <div class="card">
+              <div class="card-header">
+                <h5 class="card-title"><a target="_blank" href="../Manuals/Final-Handbook-2018.pdf">Monash Residential Handbook</a></h5>
+              </div>
+            </div>
             <div class="card">
               <div class="card-header">
                 <h5 class="card-title"><a target="_blank" href="../Manuals/Cooktop%20Manual%20TH.pdf">Cooktop Manual</a></h5>
@@ -197,9 +202,41 @@
           </h5>
         </div>
         <div id="collapseSix" class="collapse" aria-labelledby="headingSix" data-parent="#accordion">
-          <div class="card-body">
+          <div class="card">
+            <div class="card-body">
+              <div class="card-body" id="headingSix">
+                <h5>Residential Support Team Officers</h5>
+              </div>
+              <div class="card">
+                <div class="card-header">
+                  <h5 class="card-title"><a target="_blank" href="#">College Head</a></h5>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-header">
+                  <h5 class="card-title"><a target="_blank" href="#">Deputy College Head</a></h5>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-header">
+                  <h5 class="card-title"><a target="_blank" href="#">Residential Support Assistant</a></h5>
+                </div>
+              </div>
+            </div>
           </div>
-        </div>
+          <div class="card">
+            <div class="card-body">
+              <div class="card-body" id="headingSix">
+                <h5>Residential Advisors</h5>
+              </div>
+              <div class="card">
+                <div class="card-header">
+                  <h5 class="card-title"><a target="_blank" href="#">John Roberts</a></h5>
+                </div>
+              </div>
+            </div>
+          </div>
+      </div>
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
