--- a/community_and_resources/templates/community.html
+++ b/community_and_resources/templates/community.html
@@ -231,7 +231,7 @@
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">Images</h5>
-          <p class="card-text">Remember you time at Turner Hall with images of your time here! The link below will bring you to a shared Google Drive which contains a bunch on images from different events throughout the year.<p>
+          <p class="card-text">Remember you time at Turner Hall! The link below will bring you to a shared Google Drive which contains a bunch on images from different events throughout the year.<p>
           <a target="_blank" href="https://drive.google.com/open?id=1i92IYdT2n7L3G-cRitbqipZN9hUKPe3t" class="btn btn-primary">Image Drive</a>
         </div>
       </div>
@@ -240,7 +240,7 @@
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">Calendar</h5>
-          <p class="card-text">Get on top of the goings-on at the Hall with the Turner Hall calendar! The link below will take you to a Google Calendar containing al upcoming events.<p>
+          <p class="card-text">Get on top of the goings-on at the Hall with the Turner Hall calendar! The link below will take you to a Google Calendar containing all upcoming events.<p>
           <a target="_blank" href="#" class="btn btn-primary">Google Calendar</a>
         </div>
       </div>
