Resources and start of tools

--- a/templates/standard_header.html
+++ b/templates/standard_header.html
@@ -6,10 +6,10 @@
 
         <div class="collapse navbar-collapse" id="resnav">
             <div class="navbar-nav">
-                <a class="nav-item nav-link" href="/">Community</a>
+                <a class="nav-item nav-link" href="/community">Community</a>
                 <a class="nav-item nav-link" href="/events">Events</a>
                 <a class="nav-item nav-link" href="/news">News</a>
-                <a class="nav-item nav-link" href="/">Resources</a>
+                <a class="nav-item nav-link" href="/resources">Resources</a>
             </div>
             <div class="navbar-nav ml-auto">
                 <a class="nav-item nav-link" href="/profile"><i class="far fa-user userIcon"></i></a>
