--- a/community_and_resources/templates/community.html
+++ b/community_and_resources/templates/community.html
@@ -1,5 +1,7 @@
 {% extends "base.html"%}
 
+{% load static %}
+
 {% block nav %}
     {% include "standard_header.html" %}
 {% endblock %}
@@ -10,25 +12,8 @@
             <div class="card">
                 <div class="card-body">
                 <h5 class="card-tite">Tiger Trophy</h5>
-                <div class="progress">
-                    <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-                  Floor 1: 25pts
-                <div class="progress">
-                    <div class="progress-bar bg-info" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-                  Floor 2: 50pts
-                <br>
-                <div class="progress">
-                    <div class="progress-bar bg-warning" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-                  Floor 3: 75pts
-                <br>
-                <div class="progress">
-                    <div class="progress-bar bg-danger" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-                  Floor 4: 100pts
-                </div>
+                <canvas id="myChart" width="400" height="400"></canvas>
+                  <btn class="btn btn-primary" href="">Points Breakdown</btn>
             </div>
 
         <div class="card">
@@ -251,4 +236,8 @@
 
         </div>
     </div>
+{% endblock %}
+{% block scripts %}
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.bundle.min.js" integrity="sha256-MZo5XY1Ah7Z2Aui4/alkfeiq3CopMdV/bbkc/Sh41+s=" crossorigin="anonymous"></script>
+  <script src="{% static 'js/community.js' %}"></script>
 {% endblock %}
