--- a/templates/standard_header.html
+++ b/templates/standard_header.html
@@ -6,7 +6,7 @@
 
         <div class="collapse navbar-collapse" id="resnav">
             <div class="navbar-nav">
-                <a class="nav-item nav-link" href="/community">Community</a>
+                <a class="nav-item nav-link" href="/">Community</a>
                 <a class="nav-item nav-link" href="/events">Events</a>
                 <a class="nav-item nav-link" href="/news">News</a>
                 <a class="nav-item nav-link" href="/resources">Resources</a>
