--- a/community_and_resources/templates/community.html
+++ b/community_and_resources/templates/community.html
@@ -9,15 +9,16 @@
 {% block body %}
     <div class="container">
         <div class="row margin10">
-          <div class="col-md-4">
-            <div class="card">
+          <div class="col-lg-4">
+            <div class="card mb-2">
                 <div class="card-body">
                 <h5 class="card-tite">Tiger Trophy</h5>
                 <canvas id="myChart" width="400" height="400"></canvas>
                   <a class="btn btn-outline-primary btn-lg btn-block" href="{% url 'point_details' %}">Points Breakdown</a>
             </div>
+            </div>
 
-          <div class="card">
+          <div class="card mb-2">
               <div class="card-body">
                   <h5 class="card-title">Weekly Events</h5>
                   <table class="table">
@@ -36,9 +37,9 @@
               </div>
           </div>
         </div>
-          </div>
-            <div class="col-md-4">
-          <div class="card">
+
+            <div class="col-lg-4">
+          <div class="card mb-2">
             <div class="card-body">
               <h5 class="card-title">Groups</h5>
               <p class="card-text">The links below will take you to Messenger groups at the hall for those with certain interests or areas of study.
@@ -46,162 +47,68 @@
                 Academic groups will be restricted to those in that area of study, please utilise them to help each other learn, organise groups studies, etc.
                 You can also find links to Turner Hall's social media, in case you haven't joined us yet.<p>
               <div class="card" style="max-height: 400px;overflow-y: auto">
-                <div id="accordion" m="100px">
+                <div id="accordion">
                     <div class="card-header" id="headingFive">
                       <h5 class="mb-0">
                       <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                        <h5>Hall</h5>
+                        <span class="fas fa-home"></span> Hall
                       </button>
                     </h5>
                   </div>
                   <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordion">
                     <div class="card-body">
-                      <div class="card">
-                        <div class="card-header">
-                          <h5 class="card-title"><a target="_blank" href="#">Tiger Town Facebook</a></h5>
-                        </div>
-                      </div>
-                      <div class="card">
-                        <div class="card-header">
-                          <h5 class="card-title"><a target="_blank" href="#">The Jungle Facebook</a></h5>
-                        </div>
-                      </div>
-                      <div class="card">
-                        <div class="card-header">
-                          <h5 class="card-title"><a target="_blank" href="#">1 East</a></h5>
-                        </div>
-                      </div>
-                      <div class="card">
-                        <div class="card-header">
-                          <h5 class="card-title"><a target="_blank" href="#">1 West</a></h5>
-                        </div>
-                      </div>
-                      <div class="card">
-                        <div class="card-header">
-                          <h5 class="card-title"><a target="_blank" href="#">2 East</a></h5>
-                        </div>
-                      </div>
-                      <div class="card">
-                        <div class="card-header">
-                          <h5 class="card-title"><a target="_blank" href="#">2 West</a></h5>
-                        </div>
-                      </div>
-                      <div class="card">
-                        <div class="card-header">
-                          <h5 class="card-title"><a target="_blank" href="#">3 East</a></h5>
-                        </div>
-                      </div>
-                      <div class="card">
-                        <div class="card-header">
-                          <h5 class="card-title"><a target="_blank" href="#">3 West</a></h5>
-                        </div>
-                      </div>
-                      <div class="card">
-                        <div class="card-header">
-                          <h5 class="card-title"><a target="_blank" href="#">4 East</a></h5>
-                        </div>
-                      </div>
-                      <div class="card">
-                        <div class="card-header">
-                          <h5 class="card-title"><a target="_blank" href="#">4 West</a></h5>
-                        </div>
-                      </div>
+                      <ul class="list-group">
+                        <li class="list-group-item"><a target="_blank" href="#">Tiger Town Facebook</a></li>
+                        <li class="list-group-item"><a target="_blank" href="#">The Jungle Facebook</a></li>
+                        <li class="list-group-item"><a target="_blank" href="#">1 East</a></li>
+                        <li class="list-group-item"><a target="_blank" href="#">1 West</a></li>
+                        <li class="list-group-item"><a target="_blank" href="#">2 East</a></li>
+                        <li class="list-group-item"><a target="_blank" href="#">2 West</a></li>
+                        <li class="list-group-item"><a target="_blank" href="#">3 East</a></li>
+                        <li class="list-group-item"><a target="_blank" href="#">3 West</a></li>
+                        <li class="list-group-item"><a target="_blank" href="#">4 East</a></li>
+                        <li class="list-group-item"><a target="_blank" href="#">4 West</a></li>
+                      </ul>
                     </div>
                   </div>
-                </div>
-                <div id="accordion" m="100px">
                     <div class="card-header" id="headingOne">
                       <h5 class="mb-0">
                       <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                        <h5>Interest</h5>
+                        <span class="fas fa-heart"></span> Interest
                       </button>
                     </h5>
                   </div>
                   <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                     <div class="card-body">
-                      <div class="card">
-                        <div class="card-header">
-                          <h5 class="card-title"><a target="_blank" href="#">Sport</a></h5>
-                        </div>
-                      </div>
-                      <div class="card">
-                        <div class="card-header">
-                          <h5 class="card-title"><a target="_blank" href="#">Music</a></h5>
-                        </div>
-                      </div>
-                      <div class="card">
-                        <div class="card-header">
-                          <h5 class="card-title"><a target="_blank" href="#">Art</a></h5>
-                        </div>
-                      </div>
-                      <div class="card">
-                        <div class="card-header">
-                          <h5 class="card-title"><a target="_blank" href="#">Video Games</a></h5>
-                        </div>
-                      </div>
+                      <ul class="list-group">
+                        <li class="list-group-item"><a target="_blank" href="#">Sport</a></li>
+                        <li class="list-group-item"><a target="_blank" href="#">Music</a></li>
+                        <li class="list-group-item"><a target="_blank" href="#">Art</a></li>
+                        <li class="list-group-item"><a target="_blank" href="#">Video Games</a></li>
+                      </ul>
                     </div>
                   </div>
-                </div>
-                <div id="accordion" m="100px">
                     <div class="card-header" id="headingTwo">
                       <h5 class="mb-0">
                       <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                        <h5>Academic</h5>
+                        <span class="fas fa-landmark"></span> Academic
                       </button>
                     </h5>
                   </div>
                   <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                     <div class="card-body">
-                      <div class="card">
-                        <div class="card-header">
-                          <h5 class="card-title"><a target="_blank" href="#">Arts, humanities and social sciences</a></h5>
-                        </div>
-                      </div>
-                      <div class="card">
-                        <div class="card-header">
-                          <h5 class="card-title"><a target="_blank" href="#">Business</a></h5>
-                        </div>
-                      </div>
-                      <div class="card">
-                        <div class="card-header">
-                          <h5 class="card-title"><a target="_blank" href="#">Education</a></h5>
-                        </div>
-                      </div>
-                      <div class="card">
-                        <div class="card-header">
-                          <h5 class="card-title"><a target="_blank" href="#">Engineering</a></h5>
-                        </div>
-                      </div>
-                      <div class="card">
-                        <div class="card-header">
-                          <h5 class="card-title"><a target="_blank" href="#">Information technology</a></h5>
-                        </div>
-                      </div>
-                      <div class="card">
-                        <div class="card-header">
-                          <h5 class="card-title"><a target="_blank" href="#">Law</a></h5>
-                        </div>
-                      </div>
-                      <div class="card">
-                        <div class="card-header">
-                          <h5 class="card-title"><a target="_blank" href="#">Music, art, design and architecture</a></h5>
-                        </div>
-                      </div>
-                      <div class="card">
-                        <div class="card-header">
-                          <h5 class="card-title"><a target="_blank" href="#">Medicine</a></h5>
-                        </div>
-                      </div>
-                      <div class="card">
-                        <div class="card-header">
-                          <h5 class="card-title"><a target="_blank" href="#">Nursing and health sciences</a></h5>
-                        </div>
-                      </div>
-                      <div class="card">
-                        <div class="card-header">
-                          <h5 class="card-title"><a target="_blank" href="#">Science</a></h5>
-                        </div>
-                      </div>
+                      <ul class="list-group">
+                        <li class="list-group-item"><a target="_blank" href="#">Arts, humanities and social sciences</a></li>
+                        <li class="list-group-item"><a target="_blank" href="#">Business</a></li>
+                        <li class="list-group-item"><a target="_blank" href="#">Education</a></li>
+                        <li class="list-group-item"><a target="_blank" href="#">Engineering</a></li>
+                        <li class="list-group-item"><a target="_blank" href="#">Information technology</a></li>
+                        <li class="list-group-item"><a target="_blank" href="#">Law</a></li>
+                        <li class="list-group-item"><a target="_blank" href="#">Music, art, design and architecture</a></li>
+                        <li class="list-group-item"><a target="_blank" href="#">Medicine</a></li>
+                        <li class="list-group-item"><a target="_blank" href="#">Nursing and health sciences</a></li>
+                        <li class="list-group-item"><a target="_blank" href="#">Science</a></li>
+                      </ul>
                     </div>
                   </div>
                 </div>
@@ -210,8 +117,8 @@
             </div>
           </div>
               </div>
-          <div class="col-md-4">
-          <div class="card">
+          <div class="col-lg-4">
+          <div class="card mb-2">
             <div class="card-body">
               <h5 class="card-title">Images</h5>
               <p class="card-text">Remember you time at Turner Hall! The link below will bring you to a shared Google Drive which contains a bunch on images from different events throughout the year.<p>
@@ -220,7 +127,7 @@
           </div>
 
 
-          <div class="card">
+          <div class="card mb-2">
             <div class="card-body">
               <h5 class="card-title">Calendar</h5>
               <p class="card-text">Get on top of the goings-on at the Hall with the Turner Hall calendar! The link below will take you to a Google Calendar containing all upcoming events.<p>
@@ -230,7 +137,7 @@
 
 
 
-          <div class="card">
+          <div class="card mb-2">
             <div class="card-body">
               <h5 class="card-title">Cooking</h5>
               <p class="card-text">Cooking for yourself can be hard, so let us help you! The link below goes to a Google Drive containing recipes and cooking advice for you to use.<p>
