--- a/community_and_resources/templates/resources.html
+++ b/community_and_resources/templates/resources.html
@@ -18,38 +18,50 @@
                 </div>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                   <div class="card-body">
-                    <div class="card">
-                      <div class="card-header">
-                        <h5 class="card-title">Monash Emergency</h5>
+                      <div class="row">
+                          <div class="col-lg-6">
+                              <div class="card mb-2">
+                                  <div class="card-header">
+                                    <h5 class="card-title">Monash Emergency</h5>
+                                  </div>
+                                  <div class="card-body">
+                                      <p class="card-text">If you have concerns for the safety of yourself or others while on campus.<br><br><b>Phone: </b><a href="tel:+61399053333">+61 3 9905 3333</a><br><b>Room Phone: </b>333</p>
+                                  </div>
+                                </div>
+                          </div>
+                          <div class="col-lg-6">
+                              <div class="card mb-2">
+                                  <div class="card-header">
+                                    <h5 class="card-title">Monash Security General</h5>
+                                  </div>
+                                  <div class="card-body">
+                                      <p class="card-text">To report an incident or if you see something suspicious on campus.<br><br><b>Phone: </b><a href="tel:+61399027777">+61 3 9902 7777</a><br><b>Room Phone: </b>27777</p>
+                                  </div>
+                                </div>
+                          </div>
                       </div>
-                      <div class="card-body">
-                          <p class="card-text">If you have concerns for the safety of yourself or others while on campus.<br><br><b>Phone: </b><a href="tel:+61399053333">+61 3 9905 3333</a><br><b>Room Phone: </b>333</p>
+                      <div class="row">
+                          <div class="col-lg-6">
+                              <div class="card mb-2" style="height: 100%">
+                                  <div class="card-header">
+                                    <h5 class="card-title">Safer Community Unit</h5>
+                                  </div>
+                                  <div class="card-body">
+                                      <p class="card-text">Helps to find the right support if you are facing a difficult situation.<br><br><b>Phone: </b><a href="tel:+61399051599">+61 3 9905 1599</a><br><b>Email: </b><a href="mailto:safercommunity@monash.edu">safercommunity@monash.edu</a><br></p>
+                                  </div>
+                                </div>
+                          </div>
+                          <div class="col-lg-6">
+                              <div class="card mb-2" style="height: 100%">
+                                  <div class="card-header">
+                                    <h5 class="card-title">Emergency Services</h5>
+                                  </div>
+                                  <div class="card-body">
+                                    <p class="card-text">If you require police, ambulance or fire services in an emergency.<br><br><b>Phone: </b><a href="tel:000">000</a></p>
+                                  </div>
+                                </div>
+                          </div>
                       </div>
-                    </div>
-                    <div class="card">
-                      <div class="card-header">
-                        <h5 class="card-title">Monash Security General</h5>
-                      </div>
-                      <div class="card-body">
-                          <p class="card-text">To report an incident or if you see something suspicious on campus.<br><br><b>Phone: </b><a href="tel:+61399027777">+61 3 9902 7777</a><br><b>Room Phone: </b>27777</p>
-                      </div>
-                    </div>
-                    <div class="card">
-                      <div class="card-header">
-                        <h5 class="card-title">Safer Community Unit</h5>
-                      </div>
-                      <div class="card-body">
-                          <p class="card-text">Helps to find the right support if you are facing a difficult situation.<br><br><b>Phone: </b><a href="tel:+61399051599">+61 3 9905 1599</a><br><b>Email: </b><a href="mailto:safercommunity@monash.edu">safercommunity@monash.edu</a><br></p>
-                      </div>
-                    </div>
-                    <div class="card">
-                      <div class="card-header">
-                        <h5 class="card-title">Emergency Services</h5>
-                      </div>
-                      <div class="card-body">
-                        <p class="card-text">If you require police, ambulance or fire services in an emergency.<br><br><b>Phone: </b><a href="tel:000">000</a></p>
-                      </div>
-                    </div>
                   </div>
                 </div>
             </div>
@@ -63,51 +75,63 @@
                 </div>
                 <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
                   <div class="card-body">
-                      <div class="card">
-                        <div class="card-header">
-                          <h5 class="card-title">Help in Your Hall</h5>
+                      <div class="row">
+                        <div class="col-lg-6 mb-2">
+                            <div class="card" style="height: 100%">
+                                <div class="card-header">
+                                  <h5 class="card-title">Help in Your Hall</h5>
+                                </div>
+                                <div class="card-body">
+                                  <p class="card-text">
+                                    Please remember that your RAs and the RSTO are here to give you help and support for any difficulty you may be facing. They will also be able to link you up with support services that may help you.
+                                    <br>Contacts for RAs and the RSTO can be found under RST on this page.
+                                  </p>
+                                </div>
+                            </div>
                         </div>
-                        <div class="card-body">
-                          <p class="card-text">
-                            Please remember that your RAs and the RSTO are here to give you help and support for any difficulty you may be facing. They will also be able to link you up with support services that may help you.
-                            <br>Contacts for RAs and the RSTO can be found under RST on this page.
-                          </p>
+                        <div class="col-lg-6 mb-2">
+                            <div class="card">
+                                <div class="card-header">
+                                  <h5 class="card-title">On Campus Counselling</h5>
+                                </div>
+                                <div class="card-body">
+                                  <p class="card-text">
+                                    Counselling is an invaulable service which can help you overcome difficulties, whether they be large or small. Monash offers on campus counselling sevices which can be accessed by appointment in addition to a 24 hour phone counselling service.
+                                      <br><br><b>Phone for Appointment: </b><a href="tel:+61399053020">+61 3 9905 3020</a>
+                                      <br><b>24/7 Phone Counselling: </b><a href="tel:1300788336">1300 STUDENT (1300 788 336)</a><br>
+                                    <br><br><b><a class="btn btn-primary" target="_blank" href="https://www.monash.edu/health/counselling">More information and resources</a></b>
+                                  </p>
+                                </div>
+                              </div>
+                             </div>
                         </div>
-                      </div>
-                      <div class="card">
-                        <div class="card-header">
-                          <h5 class="card-title">On Campus Counselling</h5>
-                        </div>
-                        <div class="card-body">
-                          <p class="card-text">
-                            Counselling is an invaulable service which can help you overcome difficulties, whether they be large or small. Monash offers on campus counselling sevices which can be accessed by appointment in addition to a 24 hour phone counselling service.
-                              <br><br><b>Phone for Appointment: </b><a href="tel:+61399053020">+61 3 9905 3020</a>
-                              <br><b>24/7 Phone Counselling: </b><a href="tel:1300788336">1300 STUDENT (1300 788 336)</a><br>
-                            <br><br><b><a class="btn btn-primary" target="_blank" href="https://www.monash.edu/health/counselling">More information and resources</a></b>
-                          </p>
-                        </div>
-                      </div>
-                      <div class="card">
-                        <div class="card-header">
-                          <h5 class="card-title">Mental Health Programs at Monash</h5>
-                        </div>
-                        <div class="card-body">
-                          <p class="card-text">
-                            Monash offers a variety of free mental health programs which can teach you skills including stress management, study skills, suicide prevention and Mental Health First Aid. Such programs may enable you to improve your self care or help others who may be struggling in your community.
-                            <br><br><b><a class="btn btn-primary" target="_blank" href="https://www.monash.edu/health/mental-health/programs">More information</a></b>
-                          </p>
-                        </div>
-                      </div>
-                      <div class="card">
-                        <div class="card-header">
-                          <h5 class="card-title">Mindfulness</h5>
-                        </div>
-                        <div class="card-body">
-                          <p class="card-text">
-                            Mindfulness is a series of cognitive excercises which may help improve your mental state. Monash offers a range of mindfulness programs which may assist in managing stress, improving your academic performance, strengthening your relationship with others, and boosting self-esteem.
-                            <br><br><b><a class="btn btn-primary" target="_blank" href="https://www.monash.edu/health/mental-health/mindfulness">More information</a></b>
-                          </p>
-                        </div>
+                      <div class="row">
+                          <div class="col-lg-6 mb-2">
+                              <div class="card">
+                                <div class="card-header">
+                                  <h5 class="card-title">Mental Health Programs at Monash</h5>
+                                </div>
+                                <div class="card-body">
+                                  <p class="card-text">
+                                    Monash offers a variety of free mental health programs which can teach you skills including stress management, study skills, suicide prevention and Mental Health First Aid. Such programs may enable you to improve your self care or help others who may be struggling in your community.
+                                    <br><br><b><a class="btn btn-primary" target="_blank" href="https://www.monash.edu/health/mental-health/programs">More information</a></b>
+                                  </p>
+                                </div>
+                              </div>
+                          </div>
+                          <div class="col-lg-6 mb-2">
+                              <div class="card">
+                                <div class="card-header">
+                                  <h5 class="card-title">Mindfulness</h5>
+                                </div>
+                                <div class="card-body">
+                                  <p class="card-text">
+                                    Mindfulness is a series of cognitive excercises which may help improve your mental state. Monash offers a range of mindfulness programs which may assist in managing stress, improving your academic performance, strengthening your relationship with others, and boosting self-esteem.
+                                    <br><br><b><a class="btn btn-primary" target="_blank" href="https://www.monash.edu/health/mental-health/mindfulness">More information</a></b>
+                                  </p>
+                                </div>
+                              </div>
+                          </div>
                       </div>
                     </div>
                   </div>
