Improve layout and general design

--- a/community_and_resources/templates/community.html
+++ b/community_and_resources/templates/community.html
@@ -11,15 +11,15 @@
         <div class="row margin10">
           <div class="col-lg-4">
             <div class="card mb-2">
-                <div class="card-body">
+                <div class="card-body background">
                 <h5 class="card-tite">Tiger Trophy</h5>
                 <canvas id="myChart" width="400" height="400"></canvas>
-                  <a class="btn btn-outline-primary btn-lg btn-block" href="{% url 'point_details' %}">Points Breakdown</a>
+                  <a class="btn btn-outline-dark btn-lg btn-block" href="{% url 'point_details' %}">Points Breakdown</a>
             </div>
             </div>
 
           <div class="card mb-2">
-              <div class="card-body">
+              <div class="card-body background">
                   <h5 class="card-title">Weekly Events</h5>
                   <table class="table">
                    <tbody>
@@ -30,7 +30,7 @@
                       <td><b>Gardening</b><br>Saturday 11:00am</td>
                     </tr>
                     <tr>
-                      <td><b>Mingle and Munch</b><br>Sunday 8:30pm</td>
+                      <td><b>Mingle & Munch</b><br>Sunday 8:30pm</td>
                     </tr>
                   </tbody>
                   </table>
@@ -40,7 +40,7 @@
 
             <div class="col-lg-4">
           <div class="card mb-2">
-            <div class="card-body">
+            <div class="card-body background">
               <h5 class="card-title">Groups</h5>
               <p class="card-text">The links below will take you to Messenger groups at the hall for those with certain interests or areas of study.
                 Even if you only have a small interest in a certain topic, please join the group and get involved!
@@ -48,7 +48,7 @@
                 You can also find links to Turner Hall's social media, in case you haven't joined us yet.<p>
               <div class="card" style="max-height: 400px;overflow-y: auto">
                 <div id="accordion">
-                    <div class="card-header" id="headingFive">
+                    <div class="card-header background_dark" id="headingFive">
                       <h5 class="mb-0">
                       <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
                         <span class="fas fa-home"></span> Hall
@@ -71,7 +71,7 @@
                       </ul>
                     </div>
                   </div>
-                    <div class="card-header" id="headingOne">
+                    <div class="card-header background_dark" id="headingOne">
                       <h5 class="mb-0">
                       <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
                         <span class="fas fa-heart"></span> Interest
@@ -88,7 +88,7 @@
                       </ul>
                     </div>
                   </div>
-                    <div class="card-header" id="headingTwo">
+                    <div class="card-header background_dark" id="headingTwo">
                       <h5 class="mb-0">
                       <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                         <span class="fas fa-landmark"></span> Academic
@@ -119,7 +119,7 @@
               </div>
           <div class="col-lg-4">
           <div class="card mb-2">
-            <div class="card-body">
+            <div class="card-body background">
               <h5 class="card-title">Images</h5>
               <p class="card-text">Remember you time at Turner Hall! The link below will bring you to a shared Google Drive which contains a bunch on images from different events throughout the year.<p>
               <a target="_blank" href="https://drive.google.com/open?id=1i92IYdT2n7L3G-cRitbqipZN9hUKPe3t" class="btn btn-primary">Image Drive</a>
@@ -128,7 +128,7 @@
 
 
           <div class="card mb-2">
-            <div class="card-body">
+            <div class="card-body background">
               <h5 class="card-title">Calendar</h5>
               <p class="card-text">Get on top of the goings-on at the Hall with the Turner Hall calendar! The link below will take you to a Google Calendar containing all upcoming events.<p>
               <a target="_blank" href="#" class="btn btn-primary">Google Calendar</a>
@@ -138,7 +138,7 @@
 
 
           <div class="card mb-2">
-            <div class="card-body">
+            <div class="card-body background">
               <h5 class="card-title">Cooking</h5>
               <p class="card-text">Cooking for yourself can be hard, so let us help you! The link below goes to a Google Drive containing recipes and cooking advice for you to use.<p>
               <a target="_blank" href="https://drive.google.com/open?id=12hJkNo1JxtOuflgEgmmaY_YATc7gT_ts" class="btn btn-primary">Cooking Drive</a>
