--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="d-flex flex-column fullHeight">
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <nav class="navbar navbar-expand-lg navbar-light background_dark">
           <a class="navbar-brand" href="/"><img src="{% static 'HallLogo.png' %}" width="110" height="75" alt=""></a>
           {% block nav %}{% endblock %}
       </nav>
