--- a/community_and_resources/templates/community.html
+++ b/community_and_resources/templates/community.html
@@ -39,41 +39,45 @@
         </div>
 
             <div class="col-lg-4">
-              <h2>Next Event</h2>
-              <div class="card">
-                    {% if event.group_running == 'HS' %}
-                        <div class="padding10 hall-society">
-                    {% elif event.group_running == 'RST' %}
-                        <div class="padding10 rst">
-                    {% elif event.group_running == 'MRS' %}
-                        <div class="padding10 mrs">
-                    {% elif event.group_running == 'MSPT' %}
-                        <div class="padding10 monash-sport">
-                    {% elif event.group_running == 'STO' %}
-                        <div class="padding10 rst-only">
-                    {% else %}
-                        <div class="padding10">
-                    {% endif %}
-                        <img src="{{ event.poster.url }}" class="card-img-top scale-img" alt="{{ event.name }} poster">
-                    </div>
-                    <div class="card-body background">
-                        <h5 class="card-title" href="{% url 'details' event.pk %}">{{ event.name }}</h5>
-                        <p class="card-text">{{ event.start_time_and_date|date:'g:iA l j M Y' }}<br>{{ event.location }}</p>
+                {% if event %}
+                  <h2>Next Event</h2>
+                  <div class="card">
                         {% if event.group_running == 'HS' %}
-                            <a href="{% url 'details' event.pk %}" class="btn hs-btn btn-outline-dark btn-lg btn-block">Event information</a>
+                            <div class="padding10 hall-society">
                         {% elif event.group_running == 'RST' %}
-                            <a href="{% url 'details' event.pk %}" class="btn rst-btn btn-outline-dark btn-lg btn-block">Event information</a>
+                            <div class="padding10 rst">
                         {% elif event.group_running == 'MRS' %}
-                            <a href="{% url 'details' event.pk %}" class="btn mrs-btn btn-outline-dark btn-lg btn-block">Event information</a>
+                            <div class="padding10 mrs">
                         {% elif event.group_running == 'MSPT' %}
-                            <a href="{% url 'details' event.pk %}" class="btn m-sport-btn btn-outline-dark btn-lg btn-block">Event information</a>
+                            <div class="padding10 monash-sport">
                         {% elif event.group_running == 'STO' %}
-                            <a href="{% url 'details' event.pk %}" class="btn rst-only-btn btn-outline-dark btn-lg btn-block">Event information</a>
+                            <div class="padding10 rst-only">
                         {% else %}
-                            <a href="{% url 'details' event.pk %}" class="btn btn-outline-dark btn-lg btn-block">Event information</a>
+                            <div class="padding10">
                         {% endif %}
+                            <img src="{{ event.poster.url }}" class="card-img-top scale-img" alt="{{ event.name }} poster">
+                        </div>
+                        <div class="card-body background">
+                            <h5 class="card-title" href="{% url 'details' event.pk %}">{{ event.name }}</h5>
+                            <p class="card-text">{{ event.start_time_and_date|date:'g:iA l j M Y' }}<br>{{ event.location }}</p>
+                            {% if event.group_running == 'HS' %}
+                                <a href="{% url 'details' event.pk %}" class="btn hs-btn btn-outline-dark btn-lg btn-block">Event information</a>
+                            {% elif event.group_running == 'RST' %}
+                                <a href="{% url 'details' event.pk %}" class="btn rst-btn btn-outline-dark btn-lg btn-block">Event information</a>
+                            {% elif event.group_running == 'MRS' %}
+                                <a href="{% url 'details' event.pk %}" class="btn mrs-btn btn-outline-dark btn-lg btn-block">Event information</a>
+                            {% elif event.group_running == 'MSPT' %}
+                                <a href="{% url 'details' event.pk %}" class="btn m-sport-btn btn-outline-dark btn-lg btn-block">Event information</a>
+                            {% elif event.group_running == 'STO' %}
+                                <a href="{% url 'details' event.pk %}" class="btn rst-only-btn btn-outline-dark btn-lg btn-block">Event information</a>
+                            {% else %}
+                                <a href="{% url 'details' event.pk %}" class="btn btn-outline-dark btn-lg btn-block">Event information</a>
+                            {% endif %}
+                        </div>
                     </div>
-                </div>
+                {% else %}
+                    <h2>No upcoming events</h2>
+                {% endif %}
               </div>
           <div class="col-lg-4">
           <div class="card mb-2">
